auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-land
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-land
  template:
    metadata:
      labels:
        app: kube-land
    spec:
      containers:
        - name: kube-land
          image: mycodeschool/crud-auth-api:25.03.2025.12.06.04
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: kube-land
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: 8082
  selector:
    app: kube-land
