ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /ms1
            pathType: Prefix
            backend:
              service:
                name: kube-ms1
                port:
                  number: 8081
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kube-land
                port:
                  number: 8082
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-app
                port:
                  number: 3000
          - path: /kibana
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
          - path: /zipkin
            pathType: Prefix
            backend:
              service:
                name: zipkin
                port:
                  number: 9411
